[package]
name = "emergency-button-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
rtt-target = {version="0.3.1",  features = ["cortex-m"]}
stm32f4xx-hal = { version = "0.14.0", features = ["stm32f401"]}
embedded-graphics = "0.7.0"
st7920 = "0.3.0"
heapless = "0.7.16"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"
ws2812-timer-delay = { version ="0.3.0", features = []}



[profile.release]
codegen-units = 1
debug = true
lto = true
panic = "abort"

[profile.dev]
codegen-units = 1
debug = true
strip = false
opt-level = "z"
lto = true
panic = "abort"
