[package]
name = "emergency-button-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
rtt-target = {version="0.3.1",  features = ["cortex-m"]}
stm32f0xx-hal = { version = "0.18", features = ["stm32f051"]}



[profile.release]
codegen-units = 1
debug = true
lto = true
panic = "abort"

[profile.dev]
codegen-units = 1
debug = true
lto = false
panic = "abort"
